# spacemsg

gpio-sensor/: Makefile  client.c  main.c
schalterd/: Cargo.toml  README.md  shell.nix
schalterd/.cargo/: config
schalterd/src/: door.rs  main.rs  schalter.rs
snmp-agent/: main.hs
spaceapi/: EKG.hs  HQSwitch.hs  Sensors.hs  default.nix  module.nix  server.cabal  server.hs  spaceapi.json  wifi-locations.json
spaceapi/Collectd/: Listener.hs  Packet.hs
