name:              server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         server
    main-is:           server.hs
    build-depends:     base
                     , yesod
                     , bytestring
                     , aeson
                     , stm
                     , text
                     , old-time
                     , http-types
                     , unordered-containers
                     , http-client
                     , vector
                     , hashable
                     , scientific
                     , network
                     , cereal
                     , ekg

    ghc-options:       -threaded -O2 -Wall -rtsopts -with-rtsopts=-N
